# max-recipes

ai-weather-agent/: .gitignore  Procfile  Procfile.clean  Procfile.demo  README.md  metadata.yaml  pixi.toml
ai-weather-agent/backend/: pyproject.toml
autodoc-repo-chat-agent/: metadata.yaml
code-execution-sandbox-agent-with-e2b/: .gitignore  README.md  metadata.yaml  pyproject.toml
custom-ops-ai-applications/: metadata.yaml
custom-ops-introduction/: .gitignore  README.md  add_one.py  mandelbrot.py  metadata.yaml  pyproject.toml  vector_addition.py
custom-ops-introduction/operations/: add_one.mojo  mandelbrot.mojo  vector_addition.mojo
custom-ops-matrix-multiplication/: README.md  benchmarks.mojo  metadata.yaml
custom-ops-matrix-multiplication/operations/: matrix_multiplication.mojo
deepseek-qwen-autogen-agent/: .gitignore  README.md  metadata.yaml  pyproject.toml
gpu-functions-mojo/: metadata.yaml
max-fastmcp/: .gitignore  pyproject.toml  requirements.txt  rxconfig.py
max-fastmcp/max_mcp/: ui.py
max-mcp-agent/: metadata.yaml
max-offline-inference/: metadata.yaml
max-serve-anythingllm/: .gitignore  Procfile  Procfile.clean  main.py  metadata.yaml  pyproject.toml
max-serve-anythingllm/data/: .env  README.md
max-serve-continuous-chat/: .gitignore  Dockerfile.ui  Procfile  Procfile.clean  README.md  metadata.yaml  pyproject.toml
max-serve-multimodal-structured-output/: README.md  metadata.yaml  pyproject.toml
max-serve-open-webui/: metadata.yaml
max-serve-openai-embeddings/: metadata.yaml
max-serve-openai-function-calling/: metadata.yaml
mojo-operation-template/: metadata.yaml
multimodal-rag-with-colpali-llamavision-reranker/: .gitignore  Procfile  Procfile.demo  README.md  app.py  metadata.yaml  pyproject.toml  test.py
