[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
description = "Custom Operations: An Introduction"
name = "custom-ops-introduction"
requires-python = ">= 3.9,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.tasks]
package = "mojo package operations/ -o operations.mojopkg"
add_one = { cmd = "python add_one.py", depends-on = ["package"] }
mandelbrot = { cmd = "python mandelbrot.py", depends-on = ["package"] }
vector_addition = { cmd = "python vector_addition.py", depends-on = ["package"] }

[tool.pixi.dependencies]
max = ">=25.2.0.dev2025022205"
