[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
dependencies = ["rich>=13.9.4,<15", "python-chess>=1.999,<2", "tenacity>=9.0.0,<10", "requests>=2.32.3,<3"]
name = "deepseek-qwen-autogen-agent"
requires-python = ">=3.10,<3.13"
version = "0.0.0"

[system-requirements]
cuda = "12.5"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
deepseek_qwen_autogen_agent = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10,<3.13"

# Feature for MAX server (needs modular package with newer protobuf)
[tool.pixi.feature.server.dependencies]
modular = ">=25.5.0.dev2025070905,<26"

# Feature for autogen agents (needs older protobuf compatibility)
[tool.pixi.feature.agent.pypi-dependencies]
autogen-agentchat = "==0.4.7"
autogen-ext = { version = "==0.4.7", extras = ["openai"] }

# Define environments
[tool.pixi.environments]
server = ["server"]
agent = ["agent"]

[tool.pixi.tasks]
server = "MAX_SERVE_PORT=8010 max serve --model-path deepseek-ai/DeepSeek-R1-Distill-Qwen-7B --max-length 16384 --max-batch-size 1"
chat_agent = "python chat_agent.py"
screenplay_agents = "python screenplay_agents.py"
tests = "echo 'test passed'"
