[project]
authors = [{ name = "Modular", email = "hello@modular.com" }]
name = "max-serve-anythingllm"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
    "conda-forge",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
max_serve_anythingllm = { path = ".", editable = true }

[tool.pixi.tasks]
# app = { cmd = "honcho start", depends-on = "clean" }
app = { cmd = "honcho start" }
clean = "honcho -f Procfile.clean start"

[tool.pixi.dependencies]
max-pipelines = ">=25.2.0.dev2025022405,<26"
honcho = ">=2.0.0,<3"
