[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
name = "multimodal-rag-with-colpali-llamavision-reranker"
requires-python = ">=3.10,<3.13"
version = "0.0.0"
dependencies = [ "openai>=1.64.0,<2", "qdrant-client>=1.13.2,<2", "colpali-engine>=0.3.8,<0.4", "tqdm>=4.67.1,<5", "tenacity>=9.0.0,<10", "gradio>=5.18.0,<6", "pillow>=11.1.0,<12", "fitz>=0.0.1.dev2,<0.0.2", "pymupdf>=1.25.3,<2", "rerankers>=0.8.0,<0.9", "transformers>=4.47.1,<5"]

[system-requirements]
cuda = "12.5"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
torch = "==2.7.1"
torchvision = "==0.22.1"
multimodal_rag_with_colpali_llamavision_reranker = { path = ".", editable = true }

[tool.pixi.dependencies]
modular = ">=25.5.0.dev2025070905,<26"
honcho = ">=2.0.0,<3"

[tool.pixi.tasks]
app = "honcho start"
clean = "honcho -f Procfile.clean start"
tests = "python test.py"
demo = "honcho -f Procfile.demo start"
