[project]
authors = [{ name = "Modular ", email = "hello@modular.com" }]
description = "Add a short description here"
name = "backend"
requires-python = ">= 3.11,<3.13"
version = "0.0.0"
dependencies = [
    "pydantic",
    "fastapi>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "openai>=1.59.9,<2",
    "python-dotenv>=1.0.1,<2",
    "httpx>=0.28.1,<0.29",
    "tenacity>=9.0.0,<10",
    "huggingface-hub>=0.27.1,<0.28",
    "hf-transfer>=0.1.9,<0.2",
    "psutil>=6.1.1,<7",
    "numpy>=2.2.2,<3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pixi.project]
channels = [
    "https://conda.modular.com/max-nightly",
    "conda-forge",
]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.dependencies]
modular = ">=25.5.0.dev2025070905,<26"

[tool.pixi.pypi-dependencies]
backend = { path = ".", editable = true }

[tool.pixi.tasks]
dev-backend = "uvicorn src.main:app --host 0.0.0.0 --port 8001 --reload"
backend = "uvicorn src.main:app --host 0.0.0.0 --port 8001"
